--- a/public/index.html
+++ b/public/index.html
@@ -1,21 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+
 <head>
-
-  <meta charset="utf-8">
-  <title>This is practice react-redux</title>
-
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-    integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css"
-    integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-
-  <!--<link rel="stylesheet" href="/css/main.css">-->
+    <link data-require="bootstrap@3.3.2" data-semver="3.3.2" rel="stylesheet"
+          href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css"/>
+    <script data-require="react@0.12.2" data-semver="0.12.2"
+            src="//cdnjs.cloudflare.com/ajax/libs/react/0.12.2/react.js"></script>
+    <script data-require="jquery@2.1.3" data-semver="2.1.3" src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
+    <link rel="stylesheet" href="/css/main.css">
 </head>
+
 <body>
-
-<div id="app"></div>
+<div class="main">
+    <h1>Understanding the React Component Lifecycle</h1>
+    <div id="app"></div>
+    <hr/>
+    <button type="button" id="unmount" class="btn btn-danger">Unmount</button>
+    <hr/>
+    <div id="screen"></div>
+</div>
 <script src="/js/bundle.js"></script>
-
 </body>
+
 </html>
